# pavilion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  build.rs  pyproject.toml  rustfmt.toml
.cursor/: Dockerfile  environment.json
.github/workflows/: ci.yml
assets/: tailwind.css
assets/styling/: dialogue.css  navbar.css
blog-posts/: book.toml
blog-posts/src/: SUMMARY.md  welcome.md
docker/: Dockerfile.artifact  Dockerfile.local  compose.artifact.yml  compose.local.yml
docker/artifact/: README.md
src/: blog_book.rs  main.rs
src/components/: hero.rs
src/views/: blog.rs  dialogue.rs  matter.rs  me.rs  misc.rs  mod.rs  navbar.rs  random.rs
tests/: conftest.py  test_dioxus_app.py
