[project]
name = "pavilion"
version = "0.1.0"
description = "Pavilion — a Dioxus blog with Playwright e2e tests"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "playwright>=1.61.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
# Enable formatting, linting, and import sorting
line-length = 100
target-version = "py312"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint]
# Enable all error codes
select = ["E", "F", "I", "N", "W", "UP"]
# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["tests"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
